Fixed
Status Update
Comments
tk...@chromium.org <tk...@chromium.org> #2
Firefox and Safari have no problems.
Correction: Safari has this issue.
tk...@chromium.org <tk...@chromium.org>
ap...@google.com <ap...@google.com> #3
Project: chromium/src
Branch: main
commit e7fbb56d29d8e693581f2d985d06f43249ca30cc
Author: Kent Tamura <tkent@chromium.org>
Date: Mon Apr 01 06:48:31 2024
css-text: Fix an issue on text-align-last:justify with a <br>
We had a bug that a CJK ideograph followed by a <br> had an expansion
opportunity. ShapeResultSpacing::ComputeExpansion() failed to remove
the last expansion opportunity after the CJK ideograph.
This CL fixes it by removing \n from an expansion source string.
Bug: 331729346
Change-Id: I94f0e61a4bf2ef9b2bd9154b4303019bbc86fc89
Reviewed-on:https://chromium-review.googlesource.com/c/chromium/src/+/5401502
Auto-Submit: Kent Tamura <tkent@chromium.org>
Commit-Queue: Koji Ishii <kojii@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1280668}
M third_party/blink/renderer/core/layout/inline/inline_layout_algorithm.cc
M third_party/blink/renderer/platform/runtime_enabled_features.json5
A third_party/blink/web_tests/external/wpt/css/css-text/text-align/text-align-last-justify-br-ref.html
A third_party/blink/web_tests/external/wpt/css/css-text/text-align/text-align-last-justify-br.html
https://chromium-review.googlesource.com/5401502
Branch: main
commit e7fbb56d29d8e693581f2d985d06f43249ca30cc
Author: Kent Tamura <tkent@chromium.org>
Date: Mon Apr 01 06:48:31 2024
css-text: Fix an issue on text-align-last:justify with a <br>
We had a bug that a CJK ideograph followed by a <br> had an expansion
opportunity. ShapeResultSpacing::ComputeExpansion() failed to remove
the last expansion opportunity after the CJK ideograph.
This CL fixes it by removing \n from an expansion source string.
Bug: 331729346
Change-Id: I94f0e61a4bf2ef9b2bd9154b4303019bbc86fc89
Reviewed-on:
Auto-Submit: Kent Tamura <tkent@chromium.org>
Commit-Queue: Koji Ishii <kojii@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1280668}
M third_party/blink/renderer/core/layout/inline/inline_layout_algorithm.cc
M third_party/blink/renderer/platform/runtime_enabled_features.json5
A third_party/blink/web_tests/external/wpt/css/css-text/text-align/text-align-last-justify-br-ref.html
A third_party/blink/web_tests/external/wpt/css/css-text/text-align/text-align-last-justify-br.html
tk...@chromium.org <tk...@chromium.org>
ap...@google.com <ap...@google.com> #4
Project: chromium/src
Branch: main
commit acacbc692eb7f1bb7522bec36bebb35faec5be86
Author: Kent Tamura <tkent@chromium.org>
Date: Wed Jul 24 05:25:09 2024
Layout: Remove "TextAlignLastJustifyNewLine" runtime flag
It has been enabled since M125, and we have received no issues.
Bug: 331729346
Change-Id: If70bdf3ea5050c3629a2374c73e1d0c9cb26d918
Reviewed-on:https://chromium-review.googlesource.com/c/chromium/src/+/5735634
Auto-Submit: Kent Tamura <tkent@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Commit-Queue: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1332153}
M third_party/blink/renderer/core/layout/inline/justification_utils.cc
M third_party/blink/renderer/platform/runtime_enabled_features.json5
https://chromium-review.googlesource.com/5735634
Branch: main
commit acacbc692eb7f1bb7522bec36bebb35faec5be86
Author: Kent Tamura <tkent@chromium.org>
Date: Wed Jul 24 05:25:09 2024
Layout: Remove "TextAlignLastJustifyNewLine" runtime flag
It has been enabled since M125, and we have received no issues.
Bug: 331729346
Change-Id: If70bdf3ea5050c3629a2374c73e1d0c9cb26d918
Reviewed-on:
Auto-Submit: Kent Tamura <tkent@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Commit-Queue: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1332153}
M third_party/blink/renderer/core/layout/inline/justification_utils.cc
M third_party/blink/renderer/platform/runtime_enabled_features.json5
Description
data:text/html;charset=utf-8,<p style="text-align-last:justify">東京<br>京城</p>
2. Observe the rendering result.
Expected: `京` in the fist line should be right-aligned.
Actual: It's centered horizontally.
Firefox and Safari have no problems.