css-text: Fix an issue on text-align-last:justify with a <br>

We had a bug that a CJK ideograph followed by a <br> had an expansion
opportunity. ShapeResultSpacing::ComputeExpansion() failed to remove
the last expansion opportunity after the CJK ideograph.

This CL fixes it by removing \n from an expansion source string.

Bug: 331729346
Change-Id: I94f0e61a4bf2ef9b2bd9154b4303019bbc86fc89
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5401502
Auto-Submit: Kent Tamura <tkent@chromium.org>
Commit-Queue: Koji Ishii <kojii@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1280668}